# fitbit-web

./: .gitignore  Makefile  README.MD  pyproject.toml  requirements.txt
.github/workflows/: code-quality-and-tests.yaml
builder/: __init__.py  __main__.py  api.py  constants.py  utils.py
fitbit_web/: __init__.py  api.py  auth.py  client.py  utils.py
tests/: __init__.py  test_api.py  test_utils.py
