[build-system]
requires = ["setuptools", "wheel"]

[project]
description = "Package to access Fitbit WebAPI."
dynamic = ["version"]
name = "fitbit-web"

authors = [{name = "Mahdi Lamb", email = "mahdilamb@gmail.com"}]
dependencies = [
  "python-dotenv",
  "requests",
  "aiohttp",
]

[project.optional-dependencies]
all = [
  "fitbit-web[dev,test,loguru]",
]
dev = [
  "fitbit-web[test]",
  "pydantic[email]",
  "pip-tools",
]
loguru = ["loguru"]
test = [
  "fitbit-web[loguru]",
  "ruff",
  "isort",
  "mypy",
  "bandit",
  "pytest",
  "pytest-cov",
  "docformatter",
  "pydocstyle",
  "types-requests",
]
[tool.setuptools.dynamic]
version = {attr = "fitbit_web.__version__"}

[tool.setuptools]
packages = ["fitbit_web"]

[tool.bandit]
exclude_dirs = ["tests"]

[tool.ruff]
line-length = 88

[tool.docformatter]
black = true
recursive = true

[tool.mypy]
plugins = "pydantic.mypy"

[tool.pytest.ini_options]
minversion = "6.0"
python_files = [
  "test_*.py",
]
python_functions = ["*_test"]
testpaths = [
  "tests",
]
